@@ -5,6 +5,7 @@ delete=Delete
 
 usernameIs=Username is:
 titleContains=Title contains:
+postContains=Post contains:
 
 collapseMessages=Collapse messages
 removeMessages=Remove messages
